--- a/src/scss/pageActivity/pageBranch/_addACT.scss
+++ b/src/scss/pageActivity/pageBranch/_addACT.scss
@@ -5,18 +5,20 @@
 		// font-family: "微軟正黑體" !important;
 		// outline:1px solid #fa0;
 	}
+
 }
 @for $i from 1 through 100{
 	.a-pLeft-#{$i}{
 		padding-left:1px*$i;
 	}
 }
-
 .a-add-p{
-	width: 100%;
-	height: 100%;
+	width: 70%;
+	height:70%;
 	position: absolute;
-	top: 0;left: 0;
+	top:20%;
+	left:6%;
+	box-shadow: 0 0 10px #ccc;
 
 }
 
@@ -25,50 +27,75 @@
 	background-size:cover;
 	background-position: center center;
 	opacity: 0;
+	border-radius:5px 5px;
+
 }
 .a-add-put-p2{
 	background: url(../img/a_005.jpg);
 	background-size:cover;
 	background-position: center center;
 	opacity: 0;
+	border-radius:5px 5px;
+
 }
+
 .a-add-put-p3{
 	background: url(../img/a_011.jpg);
 	background-size:cover;
 	background-position: center center;
 	opacity: 0;
+	border-radius:5px 5px;
+
 }
 .a-add-put-p4{
 	background: url(../img/a_015.jpg);
 	background-size:cover;
 	background-position: center center;
 	opacity: 0;
+	border-radius:5px 5px;
+
+}
+.add-put-txt{
+	position: absolute;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.6);
+	padding: 10px;
+	h1{
+		font-size: 28px;
+		color: #FFC889;
+	}
+	p{
+		font-size: 16px;
+		line-height:28px;
+	}
 }
 
 
-.a-add-put{
-
-
-	// margin-top: 38%;	
-	top: 200px;
-
-	margin-top: 10%;	
-
-
-	position: relative;
+.a-add-put{	
+	position: absolute;
 	width: 100%;
-	height: 60%;
-	border-radius:20px;
-	background-color: rgba(100,100,100,0.5);
-	box-shadow: 0px 0px 20px #ccc;
-	// background:url(../img/a_009.jpg);
-	// background-size: cover;
-	// background-position:center center;
+	height: 100%;
+}
+.a-add-put-text{
+	width: 70%;
+	position: absolute;
+	top:10%;
+	left:6%;
+	text-align: center;
+	.fa-check-circle-o{
+		font-size: 22px;
+	}
+	span{
+		margin-left: 10px;
+		font-size: 26px;
+		font-weight: bolder;
+		text-shadow:2px 2px 2px #999;	}
 }
 .a-add-container{
-	width: 80%;
+	width: 100%;
 	margin: auto;
-	height: 90%;
+	height: 80%;
+
 }
 .selected{
 	position: relative;
@@ -94,19 +121,8 @@
 		display:block;
 		clear:both;
 	}
-	textarea{
-		margin-top: 20px;	
-		background-color: rgba(100,100,100,.5);
-		display:block;
-		width: 90%;
-		height:300px;
-	}
-	.a-add-drag{
-		margin-top: 20px;	
-		background-color: rgba(100,100,100,.5);
-		width: 100%;
-		height: 300px;
-	}
+	
+	
 }
 .cd-horizontal-timeline{
 		position: fixed;
@@ -133,6 +149,7 @@
 			border-radius:50%;
 		}
 		
+
 }
 .a-add-cTitle{
 	position: absolute;
@@ -167,9 +184,80 @@
 // 	// opacity: 1;
 // 	transform:scale(0.8);
 // }
-.a-add-form{
-	margin: 20px 0;
+.section3-box{
+	width:86%;
 
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	.a-add-left {
+
+	.a-add-box{
+		width:380px;
+		height: auto;
+		left: 0;
+		right: 0;
+		margin: auto;
+
+	}
+	input{
+		margin-left: 10px;
+		border-radius: 5px 5px;
+		color: #000;
+	}
+	.a-add-box-text{
+		width: 100px;
+		font-weight: bold;
+    	font-size: 20px;
+    	color: #fff;
+    	display: inline-block;
+		margin:20px 0;
+		text-align: right;
+    	// vertical-align: middle;
+    	// text-shadow: 2px 2px 5px #666;
+	}
+	.a-add-drag{
+		// margin-top: 20px;	
+		// background-color: rgba(100,100,100,.5);
+		width: 100%;
+		height: 100%;
+		box-shadow: 2px 1px 5px #ccc;
+	}
+	#act_img{
+		width: 240px;
+		color: #fff;
+		background-color: rgba(255,255,255,0.1);
+
+	}
+
+	}
+	.a-add-right{
+		
+		text-align: center;
+		.a-add-box-text{
+			margin: 20px 0;
+			// width: 140px;
+			font-weight: bold;
+    		font-size: 20px;
+    		color: #fff;
+		}
+		textarea{
+		// margin-top: 20px;	
+		background-color: rgba(0,0,0,0.8);
+		display:block;
+		width: 80%;
+		height:400px;
+		left: 0;
+		right: 0;
+		margin: auto;
+
+	}
+
+
+
+}
 }
 .a-add-i1{
 	&:before{
@@ -260,12 +348,15 @@
 	}
 }
 .a-add-classCover{
-	position: absolute;
-			  top: 0;
-			  bottom: 0;
-			  left: 0;
-			  right: 0;
-			  margin: auto;
+	width:100%;
+	// background-color: #ccc;
+	// position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+		
 }
 .a-add-class:hover .a-add-cTitle{
 
@@ -277,17 +368,44 @@
 .a-add-class:hover .a-add-cimg:after{
 	transform:scale(0.9);		
 }
+.a-add-class-text{
+	top: 10%;
+	bottom: 0;
+	left: 6%;
+	right: 0;
+	margin:auto;
+	cursor:pointer;
+	position: relative;
+	margin-bottom: 20px;
+	text-align: center;
+	height: 50px;
+	width: 340px;
+	// font-size: 20px;
+	.fa-plus-circle{
+		font-size: 22px;
+	}
+	span{
+		font-size: 26px;
+		font-weight: bolder;
+		text-shadow:2px 2px 2px #999;
+		margin-left: 10px;
+	}
+}
 .a-add-class{
 	// background-color: #ccc;
-	margin: 40px 0px 0px 20px;	
+	top: 11%;
+	bottom: 0;
+	left: 6%;
+	right: 0;
+	margin:auto;
 	cursor:pointer;
 	position: relative;
 	margin-bottom: 20px;
 	text-align: center;
 	// float: left;
-	display: inline-block;
-	height: 200px;
-	width: 200px;
+	// display: inline-block;
+	height: 15%;
+	width: 50%;
 	box-shadow: 0px 0px 20px #ccc;
 	background-position: center center;
 	background-size: cover;
@@ -295,21 +413,14 @@
 	transition:2s;
 	background-repeat:no-repeat;
 	overflow:hidden;
-	img{
-		position: absolute;
-		margin: auto;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		transition:2s;
-	}
+	
 	// &:hover img{
 
 	// 		width: 150%;
 	// 		height: 150%;
 			
 	// 	}
+
 	&:hover:before{
 		// border-radius:50%;
 		transform:scale(1.5);
@@ -351,22 +462,26 @@
 	top: 40%;
 }
 .a-add-google{
+	width: 80%;
+	top: 18%;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 	.googleMap{
 		height: 100%;
 	}
+	input{
+		width: 180px;
+		height: 40px;
+
+		border-radius: 5px 5px;
+	}
 }
 .a-add-write{
-
-
-	margin-top: 200px;
-
-
-
-	// .a-text{
-	// 	margin-bottom: 20px;
-	// }	
+	margin-top:100px;
 }
-add-title{
+.add-title{
 	// padding-bottom: 10px;
 	font-size: $fz-h2;
 	position: absolute;
@@ -407,8 +522,31 @@ add-title{
 			  right: 0;
 			  margin: auto;
 }
+
 .a-top25{
-	top: 20%;
+	width: 90%;
+	top: 10%;
+	left: 0;
+	right: 0;
+	margin: auto;
+	text-align: center;
+	i{
+		font-size: 28px;
+		margin: 20px 0;
+
+	}
+	span{
+		margin-left: 10px;
+		font-size: 26px;
+		font-weight: bolder;
+		text-shadow:2px 2px 2px #999;
+	}
+	#a-dateTime{
+		font-size: 20px;
+	}
+	#a-dateTime2{
+		font-size: 20px;
+	}
 }
 .a-add-darkCover{
 	height: 421px;
@@ -419,23 +557,23 @@ add-title{
 			  left: 0;
 			  right: 0;
 			  margin: auto;
-	box-shadow: 0px 0px 20px #ccc;
+	box-shadow: 0px 0px 10px #ccc;
 }
 #a-add-phoneDate{
 	display: none;
 }
 .a-add-date{
-	width: 90%;
+	width:400px;
 	height: 421px;
 	text-align: center;
-	// position: absolute;
+	position: relative;
 	margin: auto;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color:rgba(255,255,255,0.2);
-	box-shadow: 0px 0px 20px #ccc;
+	background-color:rgba(0,0,0,0.6);
+	// box-shadow: 0px 0px 10px #ccc;
 	.a-add-timePicker{
 		padding-left: 0 !important;
 		color:#000;
@@ -445,22 +583,123 @@ add-title{
 		background-color: none;	
 	}
 	.a-text{
-		font-size: $fz-h1;
+		// font-size: $fz-h1;
 		margin-bottom: 50px;
-		padding-top: 50px;
+		padding-top: 36px;
+		padding-bottom: 36px;
 		width: 100%;	
 		text-align: center;	
+		font-size: 28px;
+		background-color:rgba(0,0,0,0.75);
+		letter-spacing: 1px;
+		i{
+			font-size: 26px;
+			padding-right:8px;
+			
+		}
 	}
 	.a-add-content{
-		height: 48px;	
+		// margin-top:5px;
+		height:40px;	
 		line-height: 2;
-		font-size: $fz-h4;
+		font-size: $fz-h5;
+		letter-spacing: 1px;
+	}
+	span{
+		height: 40px;
+		left: 0;
+		right: 0;
+		margin: auto;
+		width: 140px;
+		display: block;
+	}
+	.a-dateTime{
+		width:220px;
+		height: 90px;
+		left: 0;
+		right: 0;
+		margin: auto;
+		position: absolute;
+		top: 10%;
+		// padding-top: 20px;
+		background-color: rgba(255,255,255,0.1);
+		box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.7);
+		// letter-spacing: 4px;
+		font-weight: bolder;
+		input{
+
+			margin:0 10px;
+		}
+	}
+	.a-dateTime:hover{
+		background-color: rgba(255,255,255,0.5);
+		transition:0.5s;
+		color: #000;
+
+	}
+	.a-dateTime2{
+		width:220px;
+		height: 90px;
+		left: 0;
+		right: 0;
+		margin: auto;
+		position: absolute;
+		bottom:10%;
+		// padding-top: 20px;
+		background-color: rgba(255,255,255,0.1);
+		box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.7);
+		// letter-spacing: 4px;
+		font-weight: bolder;
+		input{
+			margin:0 10px;
+		}
+	}
+	.a-dateTime2:hover{
+		background-color: rgba(255,255,255,0.5);
+		transition:0.5s;
+		color: #000;
+	}
+	.a-add-text{
+		width: 30px;
+		height: 30px;
+		position: absolute;
+		top: -5%;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+		
+		.fa-arrow-down{
+			font-size: 26px;
+		}
+	}
+	#a-timePicker1{
+		width:160px;
+		height: 28px;
+		border-radius: 5px 5px;
+		font-size: 16px;
+		letter-spacing: 2px;
+
+	}
+	#a-timePicker2{
+		width: 160px;
+		height: 28px;
+		border-radius: 5px 5px;
+		font-size: 16px;
+		letter-spacing: 2px;
 	}
 
 }
 .a-add-google{
+
 	height: 100%;	
 }
+#a-body{
+	input{
+		color:#000;
+	}
+}
+
 .a-add-map{
 	
 	// margin-top: 10px;
@@ -490,7 +729,10 @@ add-title{
 	top: 0;
 	left: 0;
 	z-index:10;
-	background-color:rgba(69,93,109,0.5);
+	background-color: rgba(0,0,0,.8);
+	border: 1px solid rgba(255,255,255,.3);
+	box-shadow: 2px 2px 10px rgba(255,255,255,.7);
+	// background-color:rgba(69,93,109,0.5);修改
 }
 .a-add-mapContent{
 	position: relative;
@@ -637,7 +879,9 @@ add-title{
 	.a-bigTitle{
 		margin-top: 250px;
 		margin-bottom: 30px;	
-		font-size: 48px;	
+		font-size: 48px;
+		font-weight: bolder;
+		text-shadow:2px 2px 2px #999;	
 
 	}
 	.btn-blue{
@@ -655,24 +899,31 @@ add-title{
 #a-add-last{
 	position: absolute;	
 }
+.dot{
+	width:80%;
 
+	left: 0;
+	right: 0;
+	margin:auto;
 .a-add-dot{
 	z-index: 20;
-	width: 100%;	
-	position: absolute;
-	top: -18.5%;	
+	width: 80%;	
+	position:fixed;
+	top: 10%;	
+}
 }
 .a-add-dot li{
 	position: relative;	
 	top: 0;	
-	width: 25px;
-	height: 25px;
+	width: 15px;
+	height: 15px;
 	background-color: #fff;
 	border-radius: 50%;
 	display: inline-block;
 	cursor: pointer;
-	margin: 10px 6.6%;	
+	margin: 10px 0 10px 12.5%; ;	
 	transition:1s;
+
 
 	.a-add-line{
 		z-index: -1;
@@ -692,8 +943,8 @@ add-title{
 			width: 100px;	
 			display: block;
 			position: absolute;
-					  bottom: -50px;
-					  left: -35px;	
+					  bottom: -44px;
+					  left: -40px;	
 
 					  margin: auto;
 		}
@@ -706,7 +957,7 @@ add-title{
 		display: block;
 		position: absolute;
 				  bottom: -20px;
-				  left: -3px;
+				  left: -11px;
 				  // right: 5px;
 				  margin: auto;
 			
@@ -732,7 +983,7 @@ add-title{
 
 }
 .a-add-dot li:nth-child(1)>.a-add-line:before{
-	content:'填寫活動內容';
+	content:'地圖搜尋';
 }
 .a-add-dot li:nth-child(2)>.a-add-line:before{
 	content:'選擇日期';
@@ -888,30 +1139,34 @@ add-title{
 
 }
 #a-add-section1{
-	
-	height: 100%;
-	width: 100%;
+	height: 80%;
+	width: 80%;
+	top:6%;
+	margin: auto; 
+
 }
 #a-add-section2{
-	margin: auto;
-	height:80%;
+	margin: auto; 
+	height:100%;
 	width:80%;
 }
 #a-add-section3{
-	position: absolute;
-			  
+	// position: absolute;
+	margin: auto; 
 	height: 100%;
-	width: 100%;
+	width: 80%;
+
 }
 #a-add-section4{
-	
+	margin: auto;
 	height: 100%;
-	width: 100%;
+	width: 80%;
+	// margin-left: 180px;
 }
 #a-add-section5{
-	
+	margin: auto;
 	height: 100%;
-	width: 100%;
+	width: 80%;
 }
 #a-add-section6{
 	
@@ -919,11 +1174,11 @@ add-title{
 	width: 100%;
 }
 .a-page{
-	top: 8%;
+	top:18%;
 	position: relative;
-
-	font-size: 20px;	
+	font-size: 20px;
 }
+
 #a-add-menu{
     z-index: 10;
     position: fixed;
@@ -940,20 +1195,71 @@ add-title{
 // 	margin: auto;
 // }
 .a-add-google{
-	position: relative;	
+	// position: relative;	
 }
 .section{
 	position: relative;
 }
+
 .a-add-intro{
+	width:100%;
+	color: #fff;
+	z-index: -1;
+	font-weight: bolder;
+	font-size: 30px;
 	position: absolute;
-			  top: 0;
+			  top:3%;
 			  bottom: 0;
 			  left: 0;
-			  
+			  margin: auto;
+			  text-align: center;
+	
+	i{
+		
+		font-size:30px;
+		color:#fff;
+		margin-right: 10px;
+
+		// vertical-align: middle;
+	}
+	.intro-text{
+		width:auto;
+		font-size: 28px;
+		display: inline-block;
+		text-align: left;
+		text-shadow:2px 2px 2px #999;
+	}
+
+	// h6{
+	// 	margin: 5px 0;
+	// 	font-size:18px;
+	// }
+	// p{
+	// 	font-size:20px;
+	// 	color:#fff;
+	// }
+}
+.next{
+	width:140px;
+	position: absolute;
+			 
+			  bottom:2.5%;
+			  right:0;
+			  left: 0;
 			  margin: auto;
 
-}
+		.next-text{
+			width:140px;
+			height: 40px;
+			text-align: center;
+			position: relative;
+			z-index: 100;
+			
+			border-radius: 5px 5px;
+			font-size: 16px;
+		}
+		 
+	}
 #section4{
 	#a_1activity_wrapper{
 		margin: auto;
@@ -964,8 +1270,16 @@ add-title{
 		overflow-y:scroll;
 		overflow-x:hidden;
 		.aa_banner{
-			margin-top: 0;
+			margin-top: 50px;
 		}
 	}
 
 }
+.act-form{
+	display: inline-block;
+}
+@import "xs";
+
+@import "md";
+@import "lg";
+@import "sm";
